crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@functions__simple_call.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for functions/simple_call.cm
input_file: test_data/functions/simple_call.cm
---
Fixture: functions/simple_call.cm
============================================================
Source code:
fn helper() -> felt {
    return 42;
}

fn main() -> felt {
    return helper();
}

============================================================
Generated CASM:
helper:
   0: 9 42 -3 _            // Return value 0: [fp -3] = 42
   1: 11 _ _ _             // return
main:
   2: 10 2 0 _             // call helper
   3: 4 1 0 -3             // Return value 0: [fp -3] = [fp + 1] + 0
   4: 11 _ _ _             // return
