crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@functions__triangular.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for functions/triangular.cm
input_file: test_data/functions/triangular.cm
---
Fixture: functions/triangular.cm
============================================================
Source code:
fn main() -> felt {
    let n = 100;
    let result = triangular(n);
    return result;
}

fn triangular(n: felt) -> felt {
    if (n == 0) {
        return 0;
    }
    return n + triangular(n - 1);
}

============================================================
Generated CASM:
main:
   0: 9 100 2 _            // [fp + 2] = 100
   1: 10 4 4 _             // call triangular
   2: 4 3 0 -3             // Return value 0: [fp -3] = [fp + 3] + 0
   3: 11 _ _ _             // return
triangular:
   4: 14 -4 4 _            // if [fp + -4] != 0 jmp rel triangular_2
   5: 12 6 _ _             // jump abs triangular_1
triangular_1:
   6: 9 0 -3 _             // Return value 0: [fp -3] = 0
   7: 11 _ _ _             // return
triangular_2:
   8: 5 -4 1 3             // [fp + 3] = [fp + -4] op 1
   9: 10 5 4 _             // call triangular
  10: 0 -4 4 -3            // [fp + -3] = [fp + -4] op [fp + 4]
  11: 11 _ _ _             // return
