crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@functions__u32_type.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for functions/u32_type.cm
input_file: test_data/functions/u32_type.cm
---
Fixture: functions/u32_type.cm
============================================================
Source code:
//!ASSERT CONTAINS: U32Add
//!ASSERT CONTAINS: U32Mul
//!ASSERT CONTAINS: U32Eq
//!ASSERT CONTAINS: U32Sub
//!ASSERT CONTAINS: U32Div

fn test_u32_literal() -> u32 {
    let x: u32 = 42;
    return x;
}

// Tests various binary operations on u32.
fn test_add(a: u32, b: u32) -> u32 {
    let c = a + b;
    return c;
}

fn test_mul(a: u32, b: u32) -> u32 {
    let c = a * b;
    return c;
}

fn test_sub(a: u32, b: u32) -> u32 {
    let c = a - b;
    return c;
}

fn test_div(a: u32, b: u32) -> u32 {
    let c = a / b;
    return c;
}

fn test_eq(a: u32, b: u32) -> u32 {
    let c = a == b;
    return c;
}

============================================================
Result: SEMANTIC ERRORS
Semantic errors found:
DiagnosticCollection {
    diagnostics: [
        Diagnostic {
            severity: Error,
            code: TypeMismatch,
            message: "type mismatch in return statement: expected `u32`, got `bool`",
            file_path: "functions/u32_type.cm",
            span: 606..607,
            related_spans: [
                (
                    569..572,
                    "function `test_eq` declared here to return `u32`",
                ),
            ],
        },
    ],
}
